# cdk

./: .gitignore  Makefile.am  README  README.md  acinclude.m4  autogen.sh  configure.ac  make.sh  make_gui.sh  makelog  rules-archive  rules-archive.pl  rules-install  rules-make  rules.pl
Patches/: busybox-1.22.x-extra.patch  busybox-1.23.2-extra.patch  busybox-1.23.2-ifupdown.patch  busybox-1.23.2-unicode.patch  busybox.config  busybox.config_nandwrite  e2fsprogs-1.42.10.patch  e2fsprogs-1.42.11.patch  e2fsprogs-1.42.13.patch  enigma2-networkbrowser-support_autofs.patch  enigma2-pli-nightly.0.diff  enigma2-pli-nightly.2.diff  enigma2-pli-nightly.2.diff.old  enigma2-pli-nightly.3.diff  enigma2-pli-nightly.4.diff  enigma2-pli-nightly.5.diff  enigma2-pli-nightly.6.diff  enigma2-pli-nightly.7.diff  enigma2-pli-nightly.8.diff  ffmpeg-2.2.patch  ffmpeg-2.4.2.patch  ffmpeg-2.6.patch  ffmpeg-3.0.1.patch  ffmpeg-aac-2.5.patch  ffmpeg-aac-3.0.1.patch  ffmpeg-hds-2.3.3.patch  ffmpeg-hds-2.5.patch  ffmpeg-hds-2.6.patch  ffmpeg-hds-3.0.1.patch  freetype-2.5.5.patch  graphlcd.patch  gst-1.0-plugins-dvbmediasink-sh4.patch  gst-plugins-bad-0.10.23.patch  gst-plugins-base-0.10.36.patch  gst-plugins-good-0.10.31.patch  gstreamer-0.10.36.patch  gstreamer.patch  host-mtd-utils-1.5.0.patch  lcd4linux.patch  libalsa.patch  (+29 more)
Patches/build-enigma2/: linux-defined_is_deprecated_timeconst.pl_stm24_0217.patch  linux-sh4-2.6.32.46-0209_adb_box.config  linux-sh4-2.6.32.46-0209_atevio7500.config  linux-sh4-2.6.32.46-0209_cuberevo.config  linux-sh4-2.6.32.46-0209_cuberevo_2000hd.config  linux-sh4-2.6.32.46-0209_cuberevo_250hd.config  linux-sh4-2.6.32.46-0209_cuberevo_mini.config  linux-sh4-2.6.32.46-0209_cuberevo_mini2.config  linux-sh4-2.6.32.46-0209_flash_ufs910.config  linux-sh4-2.6.32.46-0209_fortis_hdbox.config  linux-sh4-2.6.32.46-0209_hl101.config  linux-sh4-2.6.32.46-0209_hs7110.config  linux-sh4-2.6.32.46-0209_hs7119.config  linux-sh4-2.6.32.46-0209_hs7819.config  linux-sh4-2.6.32.46-0209_ipbox55.config  linux-sh4-2.6.32.46-0209_ipbox99.config  linux-sh4-2.6.32.46-0209_ipbox9900.config  linux-sh4-2.6.32.46-0209_octagon1008.config  linux-sh4-2.6.32.46-0209_spark.config  linux-sh4-2.6.32.46-0209_spark7162.config  linux-sh4-2.6.32.46-0209_tf7700.config  linux-sh4-2.6.32.46-0209_ufs910.config  linux-sh4-2.6.32.46-0209_ufs912.config  linux-sh4-2.6.32.46-0209_ufs913.config  linux-sh4-2.6.32.46-0209_ufs922.config  linux-sh4-2.6.32.46-0209_vitamin_hd5000.config  linux-sh4-2.6.32.59-0211_adb_box.config  linux-sh4-2.6.32.59-0211_arivalink200.config  linux-sh4-2.6.32.59-0211_atemio530.config  linux-sh4-2.6.32.59-0211_atevio7500.config  linux-sh4-2.6.32.59-0211_cuberevo.config  linux-sh4-2.6.32.59-0211_cuberevo_mini2.config  linux-sh4-2.6.32.59-0211_fortis_hdbox.config  linux-sh4-2.6.32.59-0211_hs7110.config  linux-sh4-2.6.32.59-0211_hs7119.config  linux-sh4-2.6.32.59-0211_hs7819.config  linux-sh4-2.6.32.59-0211_ipbox55.config  linux-sh4-2.6.32.59-0211_ipbox99.config  linux-sh4-2.6.32.59-0211_ipbox9900.config  linux-sh4-2.6.32.59-0211_octagon1008.config  (+75 more)
Patches/build-neutrino/: linux-sh4-2.6.32.59-0211_atevio7500.config  linux-sh4-2.6.32.59-0211_atevio7500.config.debug  linux-sh4-2.6.32.61-0215_atevio7500.config  linux-sh4-2.6.32.61-0215_cuberevo.config  linux-sh4-2.6.32.61-0215_cuberevo_2000hd.config  linux-sh4-2.6.32.61-0215_cuberevo_mini2.config  linux-sh4-2.6.32.61-0215_fortis_dp7000.config  linux-sh4-2.6.32.61-0215_fortis_hdbox.config  linux-sh4-2.6.32.61-0215_ipbox55.config  linux-sh4-2.6.32.61-0215_ipbox55.config.debug  linux-sh4-2.6.32.61-0215_ipbox99.config  linux-sh4-2.6.32.61-0215_ipbox99.config.debug  linux-sh4-2.6.32.61-0215_ipbox9900.config  linux-sh4-2.6.32.61-0215_ipbox9900.config.debug  linux-sh4-2.6.32.61-0215_octagon1008.config  linux-sh4-2.6.32.61-0215_sagemcom88.config  linux-sh4-2.6.32.61-0215_spark.config  linux-sh4-2.6.32.61-0215_spark7162.config  linux-sh4-2.6.32.61-0215_ufc960.config  linux-sh4-2.6.32.61-0215_ufs910.config  linux-sh4-2.6.32.61-0215_ufs912.config  linux-sh4-2.6.32.61-0215_ufs913.config  linux-sh4-2.6.32.61-0215_ufs922.config  linux-sh4-2.6.32.61_0217_atevio7500.config  linux-sh4-2.6.32.61_0217_fortis_dp7000.config  linux-sh4-2.6.32.61_0217_ipbox55.config.debug  linux-sh4-2.6.32.61_0217_ipbox99.config.debug  linux-sh4-2.6.32.61_0217_ipbox9900.config.debug  linux-sh4-2.6.32.61_0217_spark.config  linux-sh4-2.6.32.61_0217_spark7162.config  linux-sh4-atevio7500_setup_stm24_0217.patch  linux-sh4-ipbox99_setup_stm24_0217.patch  linux-sh4-linuxdvb_stm24_0214.patch  linux-sh4-linuxdvb_stm24_0217.patch  linux-sh4-sagemcom88_sound_stm24_0214.patch
make/: archive-specs.mk  bootstrap.mk  buildenv.mk  busybox.mk  ccache.mk  cleantargets.mk  contrib-apps.mk  contrib-libs.mk  driver.mk  enigma2-pli-nightly.mk  enigma2-plugins.mk  enigma2-release.mk  gstreamer.mk  hostapps.mk  linux-kernel.mk  net-apps.mk  neutrino-plugins.mk  neutrino-release.mk  neutrino.mk  patches.mk  python.mk  root-etc.mk  tf_u-boot.mk  tools.mk  tvheadend-release.mk  tvheadend.mk  u-boot.mk  yaud.mk
root/etc/: exports  inetd.conf  modules.available  vsftpd.conf
root/etc/init.d/: autofs  makedev  mountvirtfs
root/release/: fw_env.config_arivalink200  lircd_arivalink200.conf  lircd_spark7162.conf  rcS_adb_box  rcS_arivalink200  rcS_atemio520  rcS_atemio530  rcS_atevio7500  rcS_cuberevo_2000hd  rcS_cuberevo_250hd  rcS_cuberevo_9500hd  rcS_cuberevo_mini_fta  rcS_fortis_hdbox  rcS_hl101  rcS_hs7110  rcS_hs7119  rcS_hs7810a  rcS_hs7819  rcS_ipbox55  rcS_ipbox99  rcS_ipbox9900  rcS_neutrino  rcS_neutrino_adb_box  rcS_neutrino_atevio7500  rcS_neutrino_cuberevo_2000hd  rcS_neutrino_cuberevo_250hd  rcS_neutrino_cuberevo_9500hd  rcS_neutrino_cuberevo_mini  rcS_neutrino_cuberevo_mini2  rcS_neutrino_cuberevo_mini_fta  rcS_neutrino_fortis_hdbox  rcS_neutrino_hl101  rcS_neutrino_hs7110  rcS_neutrino_hs7119  rcS_neutrino_hs7810a  rcS_neutrino_hs7819  rcS_neutrino_ipbox55  rcS_neutrino_ipbox99  rcS_neutrino_ipbox9900  rcS_neutrino_octagon1008  (+21 more)
scripts/: diff-exclude
tfinstaller/: Makefile  initramfs_list
(+6 files in other folders)
